| Bug #19437 | Connection refused by server: "2002 Can't connect ... /master.sock (61)" | ||
|---|---|---|---|
| Submitted: | 29 Apr 2006 16:37 | Modified: | 4 Jul 2006 14:00 |
| Reporter: | Joerg Bruehe | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 5.0.21 and others | OS: | MacOS (Mac OS X (all CPUs)) |
| Assigned to: | Mats Kindahl | CPU Architecture: | Any |
[16 May 2006 18:10]
Chad MILLER
I'm stuck on this bug. I'm attaching my most recent slave.trace .
[16 May 2006 18:13]
Chad MILLER
one thread frees structure before the other uses it; grep for "0x4304a18"
Attachment: 19437-slave.trace (application/octet-stream, text), 195.66 KiB.
[16 May 2006 19:39]
Chad MILLER
last 5000 lines of slave.trace; grep for "0x43047e8"
Attachment: slave.trace (application/octet-stream, text), 194.81 KiB.
[26 May 2006 14:40]
Elliot Murphy
I believe this is also showing up intermittently in pushbuild on SLES9-x86. Crashes during slave shutdown.
[20 Jun 2006 18:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/7956
[26 Jun 2006 4:22]
Elliot Murphy
Noticed fix was pushed from team tree to main tree for 5.0.23. Merged to 5.1 tree for 5.1.12.
[4 Jul 2006 9:33]
Mats Kindahl
The problem occured sporadically when executing the replication tests on an OS X machine. After running all replication tests ~280 times with no error, it seems as if the bug is fixed. There are no specific documentation needs for the bug since it does not change any behaviour.
[4 Jul 2006 14:00]
Paul DuBois
Per Mats, no changelog entry is needed.

Description: ===== rpl000002 [ fail ] Errors are (from PATH/mysqltest-time) : mysqltest: Could not open connection 'default': 2002 Can't connect to local MySQL server through socket 'PATH/master.sock' (61) (the last lines may be the most important ones) Killing Possible Leftover Processes ===== Happens on all OS X machines ("powermacg5", "osx-imac-x86"; "xserve-a" both 32 + 64) in various products / tests, 32 failures in total in the 5.0.21 build. Errno 61 is "ECONNREFUSED" (checked on "osx-imac-x86"). Less often: same symptom, same platforms, in test "kill" (which more often shows other failure symptoms, reported as bug#16850, bug#16851, and bug#19291). The combination of "Can't connect ..." through "master.sock" with error 61 is specific to OS X, but it seems non-deterministic. How to repeat: Run the test suite on OS X.