Bug#19437 (Connection refused by server: "2002 Can't connect... /master.sock"): Clearing active VIO before calling mysql_close() in the slave I/O thread.